feet: Fix some issues